# local-agent-plaza

./: HANDOVER_AND_LINEAGE.md  README.md  RELEASE_NOTES.md  VISION_NARRATION.md  model_allowlist.json
.github/workflows/: build_android.yaml
Android/: README.md
Android/src/: gradle.properties
Android/src/app/: build.gradle.kts
Android/src/app/src/main/: AndroidManifest.xml
Android/src/app/src/main/assets/cvtbase/: clip_skip_1.mnn  clip_skip_2.mnn
Android/src/app/src/main/assets/skills/agnes-omni/: SKILL.md
Android/src/app/src/main/assets/skills/anysearch-search/: SKILL.md
Android/src/app/src/main/assets/skills/edge-tts/: SKILL.md
Android/src/app/src/main/assets/skills/exa-search/: SKILL.md
Android/src/app/src/main/assets/skills/file-workspace/: SKILL.md
Android/src/app/src/main/assets/skills/langsearch-search/: SKILL.md
Android/src/app/src/main/cpp/: CMakeLists.txt  visual_creation_jni.cpp
Android/src/app/src/main/proto/: mcp.proto  settings.proto
Android/src/app/src/main/res/layout/: ai_keyboard_ime_view.xml
Android/src/app/src/main/res/values/: strings.xml
Android/src/app/src/main/res/values-zh-rCN/: strings.xml
Android/src/app/src/main/res/xml/: ai_keyboard_ime_method.xml  network_security_config.xml
Android/src/gradle/: libs.versions.toml
docs/: TECHNICAL_OVERVIEW.md  local-visual-creation-delivery-notes.md
docs/superpowers/plans/: 2026-06-12-local-visual-creation.md  2026-07-16-audio-download-workspace-upgrades.md  2026-07-16-video-question-answering.md
model_allowlists/: 1_0_14.json
(+132 files in other folders)
